@@ -935,6 +935,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-5802. NameNode does not check for inode type before traversing down a
     path. (Xiao Chen via Yongjun Zhang)
 
+    HDFS-9101. Remove deprecated NameNode.getUri() static helper method.
+    (Mingliang Liu via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
